Modern IDB: storage/indexeddb/index-cursor.html fails. https://bugs.webkit.org/show_bug.cgi?id=151973

Reviewed by Darin Adler.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/server/MemoryIndexCursor.cpp:
(WebCore::IDBServer::MemoryIndexCursor::MemoryIndexCursor): When the initial cursor creation
  generates an iterator outside of the cursor's IDBKeyRange, invalidate the iterator.

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193755 268f45cc-cd09-0410-ab3c-d52691b4dbfc